samples/_failures_safe/1761154220_9448fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc4a3108.c: In function ‘main’:
./samples/SAFE/__tmp_dc4a3108.c:151: error: expected ‘)’ at end of input
./samples/SAFE/__tmp_dc4a3108.c:150:14: note: to match this ‘(’
  150 |     if (fgets(input_text, sizeof(input_text), stdin
      |              ^
./samples/SAFE/__tmp_dc4a3108.c:150:5: error: expected declaration or statement at end of input
  150 |     if (fgets(input_text, sizeof(input_text), stdin
      |     ^~
